--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
-# History files
-.Rhistory
-.Rapp.history
-
-# Session Data files
-.RData
-
-# Example code in package build process
-*-Ex.R
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+*.csv
+*.out
+*.xlsx
+*.xls
+*.txt
+*.edat2
+*.rar
+*.eps
+*.RData
+*.Rhistory
+*.Rproj.user/
+*.Rproj
+*.Rproj.user
