--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@
 
 # file sync related
 *.sync.ffs*
+
+# data files that will be open
+!AllData.RData
+!Data4manu.RData
+!*/rawdata*_export_2019.csv
+!exp5_specificity/rawdata_behav_exp5_2016_export_2019.csv
+!exp7/rawdata_behav_exp7a_2016.csv  # data from Hu et al 2020, collabra: psychology
+!exp7/rawdata_behav_exp7b_2018.csv  # data from Hu et al 2020, collabra: psychology
+!Scale_data/FADGS_dataset4_1_clean.csv    # data from Liu et al 2020, J Open Psych Data
