--- a/.gitignore
+++ b/.gitignore
@@ -40,21 +40,21 @@ explore_files/
 # data files that will be open
 !AllData.RData
 !Data4manu.RData
-exp1a/
-exp1b/
-exp1c/
-exp2/
-exp3a/
-exp3b/
-exp4a/
-exp4b/
-exp5_specificity/
-exp6a_erp1/
-exp6b_erp2/
-exp7/
-Scale_data/
-!*/rawdata*_export_2019.csv
+exp1a/*
+exp1b/*
+exp1c/*
+exp2/*
+exp3a/*
+exp3b/*
+exp4a/*
+exp4b/*
+exp5_specificity/*
 !exp5_specificity/rawdata_behav_exp5_2016_export_2019.csv
+exp6a_erp1/*
+exp6b_erp2/*
+exp7/*
+Scale_data/*
+!*/rawdata*_export_2019.csv
 !exp7/rawdata_behav_exp7a_2016.csv  # data from Hu et al 2020, collabra: psychology
 !exp7/rawdata_behav_exp7b_2018.csv  # data from Hu et al 2020, collabra: psychology
 !Scale_data/FADGS_dataset4_1_clean.csv    # data from Liu et al 2020, J Open Psych Data
