--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ scales/*
 !exp7/rawdata_behav_exp7a_2016.csv
 !exp7/rawdata_behav_exp7b_2018.csv
 !scales/FADGS_dataset4_1_clean.csv
+# ignore DS_Store
+.DS_Store
+**/.DS_Store
+.DS_Store?
